Fixed flickering of overlay

--- a/src/Dropzone/Dropzone.st.css
+++ b/src/Dropzone/Dropzone.st.css
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-.dropzone.dropzoneOverlay {
+.dropzoneOverlay {
   position: absolute;
   left: 0; right: 0;
   bottom: 0; top: 0;
